# SportApp-Beta

./: .gitignore  LICENSE  LoginView.swift  README.md
Gymmi/: ContentView.swift  Gymmi.entitlements  GymmiApp.swift  Info.plist  Persistence.swift
Gymmi.xcodeproj/: project.pbxproj
Gymmi.xcodeproj/xcuserdata/airmac.xcuserdatad/xcschemes/: xcschememanagement.plist
Gymmi/Gymmi.xcdatamodeld/: .xccurrentversion
Gymmi/Gymmi.xcdatamodeld/Gymmi.xcdatamodel/: contents
Gymmi/Models/: Models.swift  User.swift  UserProfile.swift
Gymmi/Services/: AuthService.swift
Gymmi/Views/: LoginView.swift  MainTabView.swift  NutritionView.swift  RegistrationView.swift  SettingsView.swift  SuccessView.swift  WorkoutsView.swift
GymmiTests/: GymmiTests.swift
GymmiUITests/: GymmiUITests.swift  GymmiUITestsLaunchTests.swift
backend/: pyproject.toml  requirements.txt  setup.py
backend/alembic/: env.py
backend/alembic/versions/: 545b19117910_create_users_table.py  6b71ba758f54_add_fitness_profile_fields.py
backend/app/: main.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/database/: database.py
backend/app/models/: user.py
backend/app/routes/: auth.py
